# mem-mcp

./: .gitignore  .pre-commit-config.yaml  GUIDELINES.md  MEMORY_MCP_BUILD_PLAN_V2.md  MEMORY_MCP_LLD_V1.md  README.md  TASKS_V1.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: infra-lint.yml  integration.yml  lint.yml  schemas-diff.yml  security-nightly.yml  unit.yml  web-build.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_seed_allowed_software.py
deploy/: Caddyfile
deploy/postgres/: init_roles.sql  pg_hba.conf  postgresql.conf.fragment  smoke_rls.sql
deploy/scripts/: bootstrap.sh  deploy.sh  destroy.sh  pg_dump_to_s3.sh  restore_from_s3.sh  seed_invite.py  verify_destroy.sh
deploy/systemd/: mem-mcp-backup.service  mem-mcp-backup.timer  mem-mcp-cleanup-clients.service  mem-mcp-cleanup-clients.timer  mem-mcp-retention-audit.service  mem-mcp-retention-audit.timer  mem-mcp-retention-deletion.service  mem-mcp-retention-deletion.timer  mem-mcp-retention-memories.service  mem-mcp-retention-memories.timer  mem-mcp-retention-tokens.service  mem-mcp-retention-tokens.timer  mem-mcp.service  mem-web.service
docs/: INVITE.md  SECURITY_REVIEW_SIGNOFF.md  load_test_results.md
docs/adr/: 0001-cognito-with-dcr-shim.md  0002-single-vm-postgres.md  0003-titan-embed-v2-not-cris.md  0004-tenant-identities-table.md  0005-versioning-by-type.md  0006-cft-not-terraform.md  README.md
docs/integration/: chatgpt_instructions.md  (+1 more)
evals/: README.md
tests/: conftest.py
tools/: dump_schemas.py  lint_tenant_scope.py
web/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
(+204 files in other folders)
