[tool.poetry]
name = "mem-mcp"
version = "0.0.0"
description = "Multi-tenant memory MCP service"
authors = ["Anand <anand@dheemantech.com>"]
readme = "README.md"
packages = [{ include = "mem_mcp", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.32", extras = ["standard"] }
asyncpg = "^0.30"
pydantic = {extras = ["email"], version = "^2.13.3"}
pydantic-settings = "^2.6"
structlog = "^24.4"
boto3 = "^1.35"
python-jose = { version = "^3.3", extras = ["cryptography"] }
httpx = "^0.27"
tenacity = "^9.0"
alembic = "^1.14"
psycopg = { version = "^3.2", extras = ["binary"] }
sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
mypy = "^1.13"
pytest = "^8.3"
pytest-asyncio = "^0.24"
hypothesis = "^6.115"
types-python-jose = "^3.3"
cfn-lint = "^1.18"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
# Use defaults

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
files = ["src/mem_mcp", "tests", "lambdas"]

[[tool.mypy.overrides]]
module = "seed_invite"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "lambdas"]
asyncio_mode = "auto"
markers = [
    "live_aws: opt-in tests against real AWS (require --live-aws)",
    "security: tenant isolation suite (REQUIRED CI gate)",
]
addopts = "-ra --strict-markers"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
